--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # logging
 logging.file.name=Shopme-backend.log
+logging.file.path=./logs
 logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-MM-dd}.%i.log
 logging.logback.rollingpolicy.max-file-size=100KB
 logging.logback.rollingpolicy.total-size-cap=1MB
