--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -12,10 +12,10 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # logging
-logging.file.name=Shopme-backend.log
-logging.file.path=./logs
-logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-MM-dd}.%i.log
-logging.logback.rollingpolicy.max-file-size=100KB
-logging.logback.rollingpolicy.total-size-cap=1MB
-logging.logback.rollingpolicy.max-history=14
-logging.logback.rollingpolicy.clean-history-on-start=true
+#logging.file.name=Shopme-backend.log
+#logging.file.path=./logs
+#logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-MM-dd}.%i.log
+#logging.logback.rollingpolicy.max-file-size=100KB
+#logging.logback.rollingpolicy.total-size-cap=1MB
+#logging.logback.rollingpolicy.max-history=14
+#logging.logback.rollingpolicy.clean-history-on-start=true
