--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port = 8081
 server.servlet.context-path=/Shopme
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.username= root
+spring.datasource.password= 1234
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
