--- a/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -40,6 +40,11 @@
 	    <version>1.3.30</version>
 	</dependency>
 
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-test</artifactId>
+	</dependency>
+		
 	</dependencies>
 
 	<build>
